--- a/css/splitflap.css
+++ b/css/splitflap.css
@@ -1,94 +1,160 @@
-.splitflap .segment
-{  
-    position: relative;
-    display: inline-block;
-    margin: 0 4px;
+body {
+  position: absolute;
+  width: 100%;
+  margin: auto;
+  height: 300px;
+  text-align: center;
+  font-size: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  font-family: "Myriad Pro", Arial, sans-serif;
+  background: #000;
+  color: #FFF;
+  height: 768px;
+  border: 1px solid white;
+}
+h1 {
+  font-weight: normal;
+}
+.splitflap {
+  font-size: 120px;
+  /*margin-bottom: 30px;*/
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.splitflap .segment {  
+  position: relative;
+  display: inline-block;
+  margin: 0 4px;
+  font-weight: bold;
+  width: 100px;
 }
 
-.splitflap:after
-{
-    content: " ";
-    display: table;
-    clear: both;
+.splitflap:after {
+  content: " ";
+  display: table;
+  clear: both;
 }
 
-.splitflap .segment ol
-{
-    padding: 0;
-    margin: 0;
-    position: relative;
+.splitflap .segment ol {
+  padding: 0;
+  margin: 0;
+  position: relative;
 }
 
-.splitflap .segment li
-{
-    position: absolute;
-    display: block;
-    top:0;
-    left: 0;
-    overflow: hidden;
-    text-align: center;
-    height: .48em;
-    width: 100%;
+.splitflap .segment li {
+  position: absolute;
+  display: block;
+  top:0;
+  left: 0;
+  overflow: hidden;
+  text-align: center;
+  height: .48em;
+  width: 100%;
 }
 
-.splitflap .top li:first-child
-{
-    position: static;
+
+.splitflap .top li:first-child {
+  position: static;
 }
 
-.splitflap .bottom li:last-child
-{
-    position: static;
+.splitflap .bottom li:last-child {
+  position: static;
 }
 
-.splitflap .top li.falling
-{
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
+.splitflap .top li.falling {
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
 }
 
-.splitflap .top li
-{
-    color: #FFF;    
-    background-color: #222;
-    -webkit-border-top-left-radius: 7px;
-    -webkit-border-top-right-radius: 7px;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    -webkit-transition: -webkit-transform 110ms 0 ease-out;
-    transition: transform 110ms 0ms ease-out;
-    -webkit-transform: scaleY(1);
-    -webkit-transform-origin: 50% 100%;
-    transform: scaleY(1);
-    transform-origin: 50% 100%;
+.splitflap .top li {
+  color: #FFF;    
+  background-color: #333;
+  -webkit-border-top-left-radius: 7px;
+  -webkit-border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  -webkit-transition: -webkit-transform 110ms 0 ease-out;
+  transition: transform 110ms 0ms ease-out;
+  -webkit-transform: scaleY(1);
+  -webkit-transform-origin: 50% 100%;
+  transform: scaleY(1);
+  transform-origin: 50% 100%;
 }
 
-.splitflap .segment ol.top
-{
-    margin-bottom: .03em;
-    line-height: 1;
+.splitflap .segment ol.top {
+  margin-bottom: .03em;
+  line-height: 1;
 }
 
-.splitflap .bottom li
-{
-    color: #CCC;
-    line-height: 0;
-    background-color: #151515;
-    -webkit-transition: -webkit-transform 100ms 60ms ease-in;
-    transition: transform 100ms 60ms ease-in;
-    -webkit-border-bottom-right-radius: 7px;
-    -webkit-border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
-    border-bottom-left-radius: 7px;
-    -webkit-transform-origin: 50% 0;
-    transform-origin: 50% 0;
+.splitflap .bottom li {
+  color: #CCC;
+  line-height: 0;
+  background-color: #333;
+  -webkit-transition: -webkit-transform 100ms 60ms ease-in;
+  transition: transform 100ms 60ms ease-in;
+  -webkit-border-bottom-right-radius: 7px;
+  -webkit-border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+  border-bottom-left-radius: 7px;
+  -webkit-transform-origin: 50% 0;
+  transform-origin: 50% 0;
 
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
 }
 
-.splitflap .bottom li.current, .splitflap .bottom li.falling
-{
-    -webkit-transform: scaleY(1);
-    transform: scaleY(1);
+.splitflap .bottom li.current, .splitflap .bottom li.falling {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1);
+}
+
+#main {
+  width: 1024px;
+  margin: 0px auto 100px;
+}
+#total.splitflap .segment:nth-child(3) {
+  margin-right: 20px;
+}
+
+
+#daily {
+  width: 1024px;
+  margin: 0px auto;
+  padding-left: 62px;
+}
+
+#daily #yesterday-container {
+  width: 400px;
+  height: 160px;
+  margin-top: 10px;
+  float: left;
+}
+
+#today.splitflap .segment, #yesterday.splitflap .segment {
+  margin-top: 10px;
+  width: 70px;
+  font-size: 90px;
+}
+#daily #compare {
+  width: 200px;
+  height: 140px;
+  margin-top: 40px;
+  float: left;
+  font-size: 90px;
+  line-height: 160px;
+}
+#daily #today-container {
+  width: 400px;
+  height: 160px;
+  margin-top: 10px;
+  float: left;
+}
+
+.clear {
+  clear: both;
+}
+
+footer {
+  margin-top: 50px;
 }
