--- a/css/splitflap.css
+++ b/css/splitflap.css
@@ -155,6 +155,15 @@ h1 {
   clear: both;
 }
 
+#logo {
+  position: absolute;
+  width: 100px;
+  height: 75px;
+  right: 40px;
+  bottom: 20px;
+  background: url("../images/akqa.png") center center no-repeat;
+  background-size: 100%;
+}
 footer {
   margin-top: 50px;
 }
