--- a/css/splitflap.css
+++ b/css/splitflap.css
@@ -8,11 +8,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
 
-  font-family: "Myriad Pro", Arial, sans-serif;
+  /*font-family: "Myriad Pro", Arial, sans-serif;*/
+  font-family: 'Poiret One', cursive;
   background: #000;
   color: #FFF;
   height: 768px;
-  border: 1px solid white;
 }
 h1 {
   font-weight: normal;
