--- a/css/splitflap.css
+++ b/css/splitflap.css
@@ -337,27 +337,90 @@ h1 {
   left: 924px;
 }
 
-.bar {
-  fill: steelblue;
+/* Monthly Graph */
+
+.m_graph {
+  height: 500px;
+  width: 1000px;
+  margin: 50px auto 0px;
+  border-left: 1px solid white;
+  border-bottom: 1px solid white;
+  position: relative;
+}
+.m_graph .notches {
+  position: absolute;
+  height: 360px;
+  width: 10px;
+  left: -6px;
 }
 
-.bar:hover {
-  fill: brown;
+.m_graph .notches .notch {
+  width: 10px;
+  border-top: 1px solid white;
+  margin-bottom: 100px;
 }
 
-.axis {
-  font: 10px sans-serif;
-  stroke: #FFF;
+.m_graph .ylegend {
+  position: absolute;
+  height: 500px;
+  width: 10px;
+  top: -8px;
+  left: -70px;
 }
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #FFF;
-  shape-rendering: crispEdges;
+.m_graph .ylegend .number {
+  width: 50px;
+  height: 100px;
+  text-align: right;
+  font-size: 18px;
 }
 
-.x.axis path {
+.m_graph .xlegend {
+  position: absolute;
+  width: 100%;
+  bottom: -25px;
+  left: 5px;
+}
+
+
+.m_graph .xlegend .day {
+  display: block;
+  float: left;
+  width: 32px;
+  text-align: center;
+  font-size: 12px;
+}
+.m_graph .bars {
+  width: 1000px;
+  height: 500px;
+  position: relative;
+  left: 5px;
+}
+.m_graph .bars .day {
+  height: 100%;
+  width: 24px;
+  margin-left: 4px;
+  margin-right: 4px;
+  float: left;
+  display: block;
+  position: relative;
+}
+
+.m_graph .bars .day .bar {
+  position: absolute;
+  bottom: 0px;
+  height: 50px;
+  width: 100%;
+  background: white;
+}
+
+.m_graph .bars .day .value {
+  position: absolute;
+  bottom: 0px;
+  font-size: 16px;
+  width: 30px;
+  left: -3px;
+  text-align: center;
 }
 
 .clear {
