--- a/css/splitflap.css
+++ b/css/splitflap.css
@@ -195,6 +195,45 @@ h1 {
   margin-right: 20px;
 }
 
+.graph-container .current-month-info {
+  width: 800px;
+  height: 50px;
+  margin: 0px auto;
+}
+.graph-container .prev-month {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  vertical-align: middle;
+}
+
+.graph-container .prev-month .button {
+  cursor: pointer;
+  display: none;
+}
+.graph-container .month {
+  display: inline-block;
+  width: 300px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.graph-container .next-month {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  vertical-align: middle;
+}
+
+.graph-container .next-month .button {
+  cursor: default;
+  display: none;
+}
+
 .graph {
   height: 480px;
   width: 1000px;
@@ -409,7 +448,7 @@ h1 {
 .m_graph .bars .day .bar {
   position: absolute;
   bottom: 0px;
-  height: 50px;
+  height: 0px;
   width: 100%;
   background: white;
 }
